fix z-index menu mobile

--- a/src/Components/header.scss
+++ b/src/Components/header.scss
@@ -106,8 +106,8 @@ header {
     right: 0;
     width: 65%;
     height: 100%;
-    z-index: 2;
-    //background-color: $base-background-color;
+    z-index: 100;
+    background-color: $base-background-color-transparent;
     backdrop-filter: blur(15px);
     border-left: 1px solid $base-background-color;
     transition: all 2s linear;
