--- a/src/static/scss/variables.scss
+++ b/src/static/scss/variables.scss
@@ -29,4 +29,5 @@ $container-max-widths: (
 $dark-base-color: #ffe0b0;
 $base-text-color: #14212b;
 $base-background-color: #faf1e5;
+$base-background-color-transparent: #faf1e56c;
 $orange-color: #faba5c;
